syntax = "proto3";
package api;
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message InitializeModelRequest { repeated ModelSettings models = 1; }

message ModelSettings {
  EncodingModel model_name = 1;
  uint32 num_threads = 2;
  bool parallel_execution = 3;
}

enum EncodingModelDevice {
  MD_UNKNOWN = 0;
  MD_CPU = 1;
  MD_CUDA = 2;
  MD_TENSOR = 3;
}

message InitializeModelResponse { repeated ModelInitResult results = 1; }
message ModelInitResult {
  EncodingModel model_name = 1;
  bool initialized = 2;
  string err_message = 3;
}

enum EncodingModel {
  M_UNKNOWN = 0;
  // instructor models
  M_INSTRUCTOR_LARGE = 1;
  M_INSTRUCTOR_XL = 2;
  M_INSTRUCTOR_BASE = 3;
  // clip models
  M_CLIP_RN50_OPENAI = 10;
  M_CLIP_RN50_YFCC15M = 11;
  M_CLIP_RN50_CC12M = 12;
  M_CLIP_RN101_OPENAI = 13;
  M_CLIP_RN101_YFCC15M = 14;
  M_CLIP_RN50x4_OPENAI = 15;
  M_CLIP_RN50x16_OPENAI = 16;
  M_CLIP_RN50x64_OPENAI = 17;
  M_CLIP_VIT_L_14_336_OPENAI = 18;
}

message EncodeItem {
  EncodingModel model = 1;
  repeated string text = 2;
  repeated string instructions = 3;
  repeated bytes image = 4;
  repeated string image_uri = 5;
}
message EncodeRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example : "{\"uuid\": \"0cf361e1-4b44-483d-a159-54dabdf7e814\"}"
  };
  repeated EncodeItem data = 1;
  string name = 2;
}

message EncodeResult {
  string err_message = 1;
  repeated float embedding = 2;
}
message EncodeResponse { repeated EncodeResult results = 1; }

service Api {
  rpc Encode(EncodeRequest) returns (EncodeResponse) {
    option (google.api.http) = {
      post : "/encode"
      body : "*"
    };
  }
  rpc InitializeModel(InitializeModelRequest)
      returns (InitializeModelResponse) {
    option (google.api.http) = {
      post : "/initalize"
      body : "*"
    };
  }
}
